--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A demo workflow for angular 2 libraries",
   "scripts": {
     "start": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
