WIP testing angular2

--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "karma-chrome-launcher": "^0.2.0",
     "karma-jasmine": "^0.3.6",
     "karma-webpack": "^1.7.0",
+    "reflect-metadata": "^0.1.2",
     "typescript": "^1.6.2",
     "webpack": "^1.12.2"
+  },
+  "dependencies": {
+    "angular2": "^2.0.0-alpha.37"
   }
 }
